test_programs/compile_failure/raw_string_huge/src/main.nr
fn main() {
    // Fails because of too many hashes for raw string (256+ hashes)
    let _a = r##############################################################################################################################################################################################################################################################################"hello"##############################################################################################################################################################################################################################################################################;
}
